# game-bots

./: CLAUDE.md  adventures-in-the-shards.md
.claude/: last_screeps_claude_md_update.txt  settings.json
bootstrap/: progressive-disclosure-claude-md.md
neptunes-pride/: .env.example  CLAUDE.md  pyproject.toml
neptunes-pride/exp-01-baseline/: CLAUDE.md  run.py  strategy.py
neptunes-pride/notes/: CLAUDE.md  api.md  mechanics.md
neptunes-pride/notes/experiments/: README.md
neptunes-pride/np_lib/: __init__.py  client.py  combat.py  economy.py  models.py
screeps/: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  regimes.json  tsconfig.base.json
screeps/agents/: claude-md-updater.md
screeps/dashboard/: analyze.mjs  fetch-stats-season10.mjs  fetch-stats.mjs  index.html  season10.html  set-regime.mjs  suggested-changes.md
screeps/docs/: console-commands.md  deployment.md  early-economy-strategy.md  economic-review.md  getting-started.md  military-strategy.md  quorum-analysis.md  screeps-rc-strategy-report.md  screeps-season10-augmentation-report.md  screeps-world-api.md  to-do.md
screeps/experiments/: CLAUDE.md  README.md
screeps/scripts/: review_strategy.py  update_claude_md.py
screeps/sim/: calibrate.mjs  engine.mjs  heuristics.mjs  monte-carlo.mjs  run.mjs  upload.mjs
screeps/strategies/adaptive/: CLAUDE.md  deploy.mjs  package-lock.json  package.json
screeps/strategies/economy-first/: package-lock.json  package.json
screeps/strategies/fortified/: package-lock.json  package.json
screeps/strategies/rush/: package-lock.json  package.json  (+1 more)
(+126 files in other folders)
