[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "np-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["np_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
